manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amorphie-token
  namespace: amorphie-token
spec:
  selector: 
    app: amorphie-token
  type: LoadBalancer
  ports:
    - port: 5000
      targetPort: 5000
